# RAG_Project

./: .gitignore  README.md  pyproject.toml  requirement.in
notebook/: document.ipynb
notebook/faiss_index/: index.faiss  index.pkl
